fixes
git-svn-id: http://pubsvn.inavare.net/openscada/modules/external/trunk@4774 1b50e8ee-deed-0310-b1de-ab401e1c4d63