@@ -19,29 +19,23 @@
 	<property file="common/config/build.properties"/>
 	
 	<property name="build.root" location="${basedir}"/>
+	<property name="source.root" location="${basedir}/.."/>
 		
 	<import file="${build.root}/common/lib/lib.xml"/>
 	
     <!-- ================================= 
           target: default              
          ================================= -->
-    <target name="default" depends="clean,external,aurora" description="The main OpenSCADA Builder file">
+    <target name="default" depends="clean,external" description="The main OpenSCADA Builder file">
     </target>
 	
 	<!-- ================================= 
           target: external              
          ================================= -->
     <target name="external" depends="" description="OpenSCADA External">
-    	<openscada.bundleBuild builder="projects/external"/>
+    	<openscada.bundleBuild builder="builder"/>
     </target>
 
-	<!-- ================================= 
-          target: aurora              
-         ================================= -->
-    <target name="aurora" depends="" description="OpenSCADA Aurora">
-    	<openscada.bundleBuild builder="projects/aurora"/>
-    </target>
-	
 	<!-- ================================= 
           target: clean              
          ================================= -->
@@ -53,43 +47,6 @@
           target: publish              
          ================================= -->
     <target name="publish" depends="" description="Publish artifacts">
-        <delete dir="${publish.root}/${buildType}"/>
-    	<mkdir dir="${publish.root}/${buildType}"/>
-
-    	<!-- copy archived P2 repositories to download -->
-    	<mkdir dir="${publish.download.root}/${buildType}/p2"/>
-    	<copy>
-    	</copy>
     </target>
-
 	
-	<!-- = = = = = = = = = = = = = = = = =
-          macrodef: openscada.bundleBuild          
-         = = = = = = = = = = = = = = = = = -->
-    <macrodef name="openscada.bundleBuild">
-        <attribute name="builder" />
-        <sequential>
-        	<delete dir="@{builder}/build" failonerror="false"/>
-        	<mkdir dir="@{builder}/build" />
-        	<java jar="${startup}" failonerror="true" maxmemory="1024m" fork="true" dir="${eclipse.home.dir}/plugins/org.eclipse.pde.build${eclipse.builder.version}/scripts">
-	    		<jvmarg value="-XX:MaxPermSize=256m"/>
-	    		
-				<arg value="-application" />
-			    <arg value="org.eclipse.ant.core.antRunner" />
-        		
-        		<!--
-        		<arg value="-verbose"/>
-        		-->
-        		
-				<arg value="-Dbuilder=${basedir}/@{builder}"/>
-        		<arg value="-Dbuild.root=${build.root}"/>
-	    		<arg value="-DbaseLocation=${eclipse.home.dir}"/>
-				<arg value="-DbuildDirectory=${basedir}/@{builder}/build"/>
-        		
-        		<arg value="-DbuildType=${buildType}"/>
-        		<arg value="-DbuildId=${buildId}"/>
-			</java>
-        </sequential>
-    </macrodef>
-
 </project>
